[package]
name = "supernote-sync"
version = "0.1.0"
edition = "2024"
description = "Standalone CLI/TUI sync tool for Supernote notes"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.5.43", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
